<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6d636363">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="#cccc"
                android:orientation="vertical"
                android:paddingBottom="1dp"
                android:paddingTop="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <com.example.mm.ametloginandregister.Fonts.TitleFont
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:text="@string/txt_sign"
                        android:textColor="@color/LightGreenColor"
                        android:textSize="40sp" />

                    <com.example.mm.ametloginandregister.Fonts.TitleFont
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txt_up"
                        android:textColor="@color/WhiteColor"
                        android:textSize="40sp" />
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/f-name_id"
                style="@style/edetTextRegester"
                android:layout_marginTop="40dp"
                android:hint="@string/f_name_hent"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <EditText
                android:id="@+id/l-name_id"
                style="@style/edetTextRegester"
                android:layout_marginTop="8dp"
                android:hint="@string/l_name_hent"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/f-name_id" />

            <EditText
                android:id="@+id/passord_id"
                style="@style/edetTextRegester"
                android:layout_marginTop="8dp"
                android:drawableRight="@drawable/ic_vpn_key_black_24dp"
                android:hint="@string/passord_hent"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/l-name_id" />

            <EditText
                android:id="@+id/re-passord_id"
                style="@style/edetTextRegester"
                android:layout_marginTop="8dp"
                android:drawableRight="@drawable/ic_lock_black_24dp"
                android:hint="@string/re_passord_hent"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passord_id" />

            <EditText
                android:id="@+id/email_id"
                style="@style/edetTextRegester"
                android:layout_marginTop="8dp"
                android:drawableRight="@drawable/ic_email_black_24dp"
                android:hint="@string/email_hent"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/re-passord_id" />

            <EditText
                android:id="@+id/phone_id"
                style="@style/edetTextRegester"
                android:layout_marginTop="8dp"
                android:drawableRight="@drawable/ic_phone_black_24dp"
                android:hint="@string/phone_hent"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_id" />

            <Button
                android:onClick="CreateNewAccount"
                android:id="@+id/sign_in_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_btn_signpactivity"
                android:padding="5dp"
                android:text="@string/login_ptn"
                android:textAllCaps="false"
                android:textColor="@color/WhiteColor"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_id" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="24dp"
                android:background="@color/GreyColor"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button">

                <FrameLayout
                    style="@style/view"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/sign_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/login_ptn"
                    android:textColor="@color/WhiteColor"
                    android:textSize="20sp" />

                <FrameLayout
                    style="@style/view"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
